--- a/.gitignore
+++ b/.gitignore
@@ -42,3 +42,7 @@ app.*.map.json
 /android/app/debug
 /android/app/profile
 /android/app/release
+/ios/Runner/GoogleService-Info.plist
+/android/app/google-services.json
+/ios/firebase_app_id_file.json
+/ lib/firebase_options.dart
